# alfred-json-rust

./: Cargo.toml  README.md
src/: jsonconfig.rs  lib.rs  scriptfilter.rs
src/scriptfilter/: fzf.rs
